--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "husky": "^9.1.7"
   },
   "scripts": {
+    "install" : "cd docs && bundle install",
     "start": "cd docs && bundle exec jekyll serve"
   }
 }
